--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -29,7 +29,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="桃太郎がパワーをゲットしてから、鬼退治をします。イヌ、サル、キジは好物を持参してから仲間に出来ます。桃と各動物はゲットするとパワー1点です。6点で鬼に打ち勝つことができますが、3点未満では、鬼に負けてしまいます。二人の鬼を倒して、勝利を収めて下さい。タイマーで時間を競うことが出来ます。"
+            android:text="桃太郎がパワーをゲットしてから、鬼退治をします。イヌ、サル、キジは好物を持参すれば仲間に加えることが出来ます。桃と各動物はゲットするとパワー1点です。6点で鬼に打ち勝つことができますが、3点未満では、鬼に負けてしまいます。二人の鬼を倒して、勝利を収めて下さい。タイマーで時間を競うことが出来ます。"
             android:textSize="18sp"
             android:textColor="#000000"
             android:gravity="start"
